# xray

./: .dockerignore  Dockerfile  infer.py  main.py  pyproject.toml  requirements.txt
data/: data_map.csv  lbl_encoder.pkl
notebooks/: preprocess.ipynb  train.ipynb
