[project]
name = "xray"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marwan_Atef", email = "marwan.atef712@gmail.com"},
]
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.1",
    "colorama==0.4.6; platform_system == \"Windows\"",
    "fastapi==0.122.0",
    "h11==0.16.0",
    "idna==3.11",
    "pillow==12.0.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
production = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
    "scikit-learn>=1.7.2",
]
[tool.pdm]
distribution = false
