[project]
name = "xray"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marwan_Atef", email = "marwan.atef712@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
production = [
    "pillow>=12.0.0",
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "scikit-learn>=1.7.2",
]
dockerpreexist = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
]
[tool.pdm]
distribution = false


[[tool.pdm.source]]
name = "pytorch_index"
url = "https://download.pytorch.org/whl/cu126"
include_packages = ["torch", "torchvision" , "torchaudio"]
exclude_packages = ["*"]
